@@ -1,3 +1,11 @@
+2006-06-19  Ronaldo Maia  <romaia@async.com.br>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/datatypes.py: Changes the way localeconv is retrived, so it gets
+	checked and fixed if necessary, before using it.
+	* tests/test_datatypes.py: Add some pickling tests.
+
 2006-06-12  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/objectlist.py: Add use-markup property on column
